# Dedsec

./: .gitignore  CMakeLists.txt  README.md
src/: animation.cpp  console_color.cpp  dedsec_tool.cpp  dev_tools.cpp  main.cpp  network_tools.cpp  security_tools.cpp  system_utils.cpp  utils.cpp
src/include/: dedsec.hpp
